# doubao-murmur-ubuntu

./: .gitignore  README.md
.github/workflows/: flatpak-release.yml
docs/: linux-port-plan.md
linux/: .gitignore  Makefile  README.md  pyproject.toml  run.sh
linux/flatpak/: com.doubao.Murmur.desktop  com.doubao.Murmur.metainfo.xml  com.doubao.Murmur.yml  setup-permissions.sh
linux/src/doubao_murmur/: __init__.py  __main__.py  app.py  app_state.py  asr_client.py  audio_capture.py  config.py  host_tools.py  params_store.py  transcription.py
linux/src/doubao_murmur/hotkey/: evdev_listener.py  manager.py  overlay_button.py  x11_listener.py
linux/src/doubao_murmur/keyboard/: __init__.py  injector.py  key_button.py  keyboard_window.py  layouts.py  state.py
linux/src/doubao_murmur/paste/: paste_helper.py
linux/src/doubao_murmur/resources/: inject-dom.js  inject-websocket.js
linux/src/doubao_murmur/ui/: login_window.py  overlay.py  sni_tray.py  tray_icon.py  windowing.py
linux/tests/: test_asr_client.py  test_audio_capture.py  test_config.py  test_params_store.py  test_paste_helper.py
