[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "doubao-murmur"
version = "1.4.3"
description = "Voice-to-text input using Doubao ASR for SteamOS/Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "lilong7676" },
]

dependencies = [
    "PyGObject>=3.48",
    "websockets>=12.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
doubao-murmur = "doubao_murmur.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"doubao_murmur.resources" = ["*.js", "*.css", "*.svg"]
